# brenSDL

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  main.c
brender/inc/: actor.h  angles.h  brdiag.h  brender.h  brerr.h  brhton.h  brmem.h  camera.h  colour.h  compend.h  compiler.h  fmtproto.h  fwpextra.fns  fwproto.h  g386ifix.h  light.h  material.h  model.h  mscifix.h  order.h  pixelmap.h  poolmac.inc  samstate.rst  scalar.h  vecfns.h  vector.h  wtcifix.h  zbproto.h  zsproto.h
brender/lib/: brfmmfr.lib  brfmmxr.lib  brfwmfr.lib  brfwmxr.lib  brzbmfr.lib  brzbmxr.lib
brender/std/: stddiag.c  stderr.c  stdfile.c  stdmem.c
sdl2/: sdl2-config.cmake
